Fixed horizontal scroll bar

--- a/css/main.css
+++ b/css/main.css
@@ -293,7 +293,7 @@ template {
     transition: all 0.6s ease-out; }
 
 html {
-  overflow: scroll;
+  overflow-y: scroll;
   -webkit-overflow-scrolling: touch; }
 
 body {
@@ -1128,7 +1128,7 @@ footer {
 .footer-social-icons {
   width: 90%;
   margin: 0 auto;
-  max-width: 20em;
+  max-width: 15em;
   display: flex;
   justify-content: center;
   margin: 1.75em auto 4em; }
