--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -4,7 +4,7 @@ footer {
 }
 
 .footer-social-icons{
-  @include container($max-width: 20em);
+  @include container($max-width: 15em);
   display: flex;
   justify-content: center;
   margin: 1.75em auto 4em;
